--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "PostATweetWhenVideoIsPostedByChannel",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "moment": "^2.29.1",
+    "twit": "^2.2.11",
     "yt-channel-info": "^2.2.0",
     "ytdl-core": "^4.9.0"
   }
