--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "PostATweetWhenVideoIsPostedByChannel",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
